Fixed the shit v2 and added Dynamo in serverless

--- a/backend/agentfit-post-data/serverless.yml
+++ b/backend/agentfit-post-data/serverless.yml
@@ -34,4 +34,19 @@ functions:
      - httpApi:
           path: /post-wod
           method: post
-          cors: true
+
+resources:
+  Resources:
+    agenfit:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: agenfit
+        AttributeDefinitions:
+          - AttributeName: WodId
+            AttributeType: S
+        KeySchema:
+          - AttributeName: WodId
+            KeyType: HASH
+        ProvisionedThroughput:
+            ReadCapacityUnits: 4
+            WriteCapacityUnits: 4
